--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <title>7 Wonders of the Ancient World</title>
 </head>
-
 <body style="background-color: lightyellow;">
-
   <h1 style="color:Tomato;">7 Wonders of the Ancient World</h1>
   <h3>Discover and learn more about the 7 Wonders of the Ancient World</h3>
-
   <nav>
     <a href="#intro">Introduction</a> |
     <a href="#pyramid">Great Pyramid</a> |
@@ -19,153 +16,65 @@
     <a href="#colossus">Colossus</a> |
     <a href="#lighthouse">Lighthouse</a>
   </nav>
-
   <hr>
-
   <section id="intro">
     <h2>Brief Introduction to the 7 Wonders</h2>
-
-    <p>The Seven Wonders of the Ancient World are a list of remarkable structures built by ancient civilizations. These wonders were chosen because of their size, beauty, and importance. They showed what humans could achieve without modern technology. Each wonder reflected the values of the civilization that built it.</p>
-
-    <p>The wonders were spread across different regions, including Egypt, Greece, and parts of the Middle East. They served different purposes such as tombs, temples, statues, and navigation aids. Some were built for religion, others for love, power, or safety. Together, they represent faith, strength, creativity, and intelligence.</p>
-
-    <p>Only one of the Seven Wonders still exists today, the Great Pyramid of Giza. The others were destroyed by earthquakes, fires, or time. Even though they are gone, historical records keep them alive. Studying them helps us understand ancient history.</p>
-
-    <p>The Seven Wonders still matter because they inspire modern builders and thinkers. They remind us that great achievements are possible with vision and effort. Ancient people aimed to leave a lasting mark on the world. Their success continues to influence us today.</p>
+    <p>The Seven Wonders of the Ancient World were remarkable structures recognized by ancient Greek travelers for their size and beauty. Most were built in the Mediterranean and Middle East regions. Only one still stands today, but the rest live on through art, stories, and history. These monuments represent the creativity and skill of ancient civilizations. :contentReference[oaicite:1]{index=1}</p>
+    <p>This list was first written down by ancient writers and historians. They included only what they thought was most impressive and extraordinary. These wonders were landmarks of religion, culture, power, and engineering. Each reflected the culture that built it. :contentReference[oaicite:2]{index=2}</p>
   </section>
-
   <hr>
-
   <section id="pyramid">
     <h2>Egypt: The Great Pyramid of Giza</h2>
-
-    <p>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu. It stands near the Nile River and towers over the land. The pyramid was meant to prepare the pharaoh for the afterlife. This shows how strong Egyptian religious beliefs were.</p>
-
-    <p>Millions of stone blocks were used to build the pyramid. Workers moved these stones without modern machines. Their planning and math skills were very advanced. This proves the intelligence of ancient Egyptians.</p>
-
-    <p>The pyramid was once covered in smooth white limestone. It reflected sunlight and shined brightly. People could see it from far away. It symbolized power and greatness.</p>
-
-    <p>Inside the pyramid are narrow halls and chambers. These spaces protected the pharaoh’s body and treasures. Every part was carefully planned. Nothing was built by accident.</p>
-
-    <p>The Great Pyramid is the only wonder still standing today. It has survived time and weather. This shows the strength of its design. No other ancient structure compares to it.</p>
-
-    <p>The Great Pyramid matters because it shows human determination. It proves great things can be built with effort. People still study it today. It continues to inspire the world.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Kheops-Pyramid.jpg" alt="Great Pyramid of Giza" width="450" height="300">
+    <p>The Great Pyramid of Giza was built as a tomb for Pharaoh Khufu around 2560 BCE. It is the only ancient wonder that still stands today. It was the tallest man-made structure on Earth for nearly 4,000 years. Being made from more than 2 million stone blocks required incredible engineering without modern tools. :contentReference[oaicite:3]{index=3}</p>
+    <p>The pyramid was the largest of the three pyramids at Giza. The precise alignment and size show how advanced the builders were. It covered the pharaoh’s burial chamber and protected treasures inside. Though most of its smooth outer stones are gone, the pyramid’s core still remains. :contentReference[oaicite:4]{index=4}</p>
   </section>
-
   <hr>
-
   <section id="gardens">
-    <h2>Babylon, modern-day Iraq: The Hanging Gardens of Babylon</h2>
-
-    <p>The Hanging Gardens of Babylon were built in a dry land. They were filled with trees, plants, and flowers. Water flowed through the gardens. This made them very rare for the region.</p>
-
-    <p>The gardens were built on high stone terraces. Water was lifted from the river below. This required smart engineering. It showed advanced technology.</p>
-
-    <p>Many believe the gardens were built for a queen. She missed the green land of her home. The gardens were meant to comfort her. This makes the wonder a symbol of love.</p>
-
-    <p>The gardens also showed royal power. Creating beauty in a harsh land showed control over nature. Few kingdoms could do this. It proved Babylon was strong.</p>
-
-    <p>No physical remains of the gardens have been found. This has caused debate among historians. Ancient writers described them in detail. Their stories kept the gardens alive.</p>
-
-    <p>The Hanging Gardens matter because they show creativity. They remind us beauty can exist anywhere. Even ideas can change history. This wonder still inspires imagination.</p>
+    <h2>Babylon, Iraq: The Hanging Gardens of Babylon</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Hanging_Gardens_of_Babylon_%28rendering%29.jpg" alt="Hanging Gardens of Babylon" width="450" height="300">
+    <p>The Hanging Gardens were said to be built by King Nebuchadnezzar II for his wife, Queen Amytis, because she missed the green hills of her home. These gardens were described as terraces filled with trees, flowers, and plants. Water was lifted from the Euphrates River to feed the gardens. Whether they truly existed remains debated, but they were described by ancient writers. :contentReference[oaicite:5]{index=5}</p>
+    <p>If real, the gardens would have shown advanced engineering. They would have used irrigation to lift water to the top levels. This would make them one of the most impressive ancient garden designs ever. Even with uncertain evidence, they are remembered as a symbol of beauty and care. :contentReference[oaicite:6]{index=6}</p>
   </section>
-
   <hr>
-
   <section id="zeus">
     <h2>Greece: The Statue of Zeus at Olympia</h2>
-
-    <p>The Statue of Zeus was built inside a temple at Olympia. It honored Zeus, the king of the Greek gods. People traveled far to see it. The statue inspired awe.</p>
-
-    <p>The statue was made of gold and ivory. Zeus sat on a grand throne. The statue filled the temple space. Visitors felt small before it.</p>
-
-    <p>Religion was very important in Greece. Zeus was seen as powerful and wise. The statue strengthened faith. It reminded people of divine authority.</p>
-
-    <p>Olympia was the site of the Olympic Games. Athletes believed Zeus watched them. This connected religion and competition. The statue made the games sacred.</p>
-
-    <p>The statue was later destroyed by fire. Nothing remains of it today. Written records describe its beauty. These records keep it remembered.</p>
-
-    <p>The Statue of Zeus matters because it shows the power of belief. Art helped express faith. People used creativity to honor gods. Its influence still exists.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Statue_of_Zeus_at_Olympia_%2813th_century_render%29.jpg" alt="Statue of Zeus at Olympia" width="450" height="300">
+    <p>The Statue of Zeus at Olympia was a giant seated figure of the king of the Greek gods, made by the sculptor Phidias around 435 BCE. It stood in the Temple of Zeus in Olympia, where the ancient Olympic Games took place. The statue was made with ivory and gold over a wooden frame. It was meant to honor Zeus and show his importance in Greek religion. :contentReference[oaicite:7]{index=7}</p>
+    <p>Descriptions say the statue was over 12 meters tall. It sat on a throne decorated with precious materials. People came from many places to see it and feel awe. The statue was eventually destroyed long ago, but old descriptions keep its memory alive. :contentReference[oaicite:8]{index=8}</p>
   </section>
-
   <hr>
-
   <section id="artemis">
     <h2>Turkey: The Temple of Artemis at Ephesus</h2>
-
-    <p>The Temple of Artemis was built to honor the goddess Artemis. It stood in the city of Ephesus. The temple was one of the largest ever built. It amazed visitors.</p>
-
-    <p>The temple had tall marble columns. Detailed carvings covered its walls. Artists worked for many years. Their skill showed great talent.</p>
-
-    <p>People visited the temple to worship. It was also a place of trade. This made it a social center. Religion and daily life mixed there.</p>
-
-    <p>The temple showed wealth and power. Building it required money and skill. Few cities could match it. Ephesus became famous.</p>
-
-    <p>The temple was destroyed many times. Fires and attacks caused damage. People rebuilt it again and again. This showed strong devotion.</p>
-
-    <p>Today, only ruins remain. The temple is still remembered. Its beauty lives in history. It proves dedication lasts.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Artemision_Ephesos_%28artist_render%29.jpg" alt="Temple of Artemis at Ephesus" width="450" height="300">
+    <p>The Temple of Artemis at Ephesus was a large temple dedicated to the Greek goddess Artemis. It was rebuilt multiple times due to destruction from floods and attacks. In its prime, it was one of the largest temples in the ancient world. Its size and decoration attracted visitors from around the world. :contentReference[oaicite:9]{index=9}</p>
+    <p>The temple had many tall columns and was made with fine marble. It was a religious center and also a place where people gathered for trade and events. Despite being rebuilt, it was ultimately destroyed by invaders. Only a few remains and ruins show where it once stood. :contentReference[oaicite:10]{index=10}</p>
   </section>
-
   <hr>
-
   <section id="mausoleum">
     <h2>Turkey: The Mausoleum at Halicarnassus</h2>
-
-    <p>The Mausoleum was built as a tomb for King Mausolus. His wife ordered its construction. It was meant to honor him. Love inspired its creation.</p>
-
-    <p>The structure was tall and detailed. It included statues and columns. Skilled artists worked on it. Their work made it unique.</p>
-
-    <p>The Mausoleum mixed many cultural styles. Greek and Egyptian designs were used. This showed shared ideas. It represented unity.</p>
-
-    <p>The tomb was meant to last forever. It honored memory and respect. Leaders wanted to be remembered. This belief shaped its design.</p>
-
-    <p>Earthquakes later destroyed the Mausoleum. Stones were reused in other buildings. Time changed its form. Its impact remained.</p>
-
-    <p>The word mausoleum comes from this wonder. This shows its influence. One structure shaped language. Its legacy still lives.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Mausoleum_at_Halicarnassus_%28reconstruction%29.jpg" alt="Mausoleum at Halicarnassus" width="450" height="300">
+    <p>The Mausoleum was a tomb built for King Mausolus by his wife around 351 BCE. It was so grand that its name became the word we now use for large tombs. Its tall structure and detailed sculptures made it unique among ancient buildings. :contentReference[oaicite:11]{index=11}</p>
+    <p>The mausoleum combined Greek, Egyptian, and Lycian architectural styles. It held statues and carvings created by famous artists of the ancient world. Though destroyed by earthquakes over time, its legacy influenced many other tombs. :contentReference[oaicite:12]{index=12}</p>
   </section>
-
   <hr>
-
   <section id="colossus">
     <h2>Greece: The Colossus of Rhodes</h2>
-
-    <p>The Colossus of Rhodes was a giant bronze statue. It was built after a military victory. The statue honored the sun god Helios. It stood near the harbor.</p>
-
-    <p>Ships could see the statue as they arrived. It welcomed visitors to the city. The people felt pride. It became a symbol of freedom.</p>
-
-    <p>The statue took many years to build. Metal from weapons was reused. War materials became art. This showed resilience.</p>
-
-    <p>An earthquake destroyed the Colossus. It fell to the ground. Even broken, people admired it. Its size amazed everyone.</p>
-
-    <p>The remains stayed for centuries. Travelers came to see them. The statue was still famous. Its image lived on.</p>
-
-    <p>The Colossus matters because it represents strength. Even short life can leave impact. Pride shaped its creation. History remembers it.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Colossus_of_Rhodes_%28artist_render%29.jpg" alt="Colossus of Rhodes" width="450" height="300">
+    <p>The Colossus of Rhodes was a giant bronze statue of the sun god Helios, built to celebrate Rhodes’ victory after a siege. It stood by the harbor and welcomed ships arriving at the city. The statue was believed to be one of the tallest of the ancient world. :contentReference[oaicite:13]{index=13}</p>
+    <p>The statue stood for about 54 years before an earthquake toppled it. Though broken, the remains stayed for centuries and were admired by visitors. The Colossus symbolized strength and pride for the people of Rhodes. :contentReference[oaicite:14]{index=14}</p>
   </section>
-
   <hr>
-
   <section id="lighthouse">
     <h2>Egypt: The Lighthouse of Alexandria</h2>
-
-    <p>The Lighthouse of Alexandria was built to guide ships. It stood on an island near the city. Sailors depended on it. It kept trade safe.</p>
-
-    <p>The lighthouse used fire and mirrors. Light shined across the sea. This was advanced technology. It saved many lives.</p>
-
-    <p>The structure was tall and strong. It survived storms and waves. Engineers planned it well. Its design was impressive.</p>
-
-    <p>Alexandria was a center of learning. The lighthouse reflected knowledge. It helped connect the world. It was more than a tower.</p>
-
-    <p>Earthquakes destroyed the lighthouse. Stones fell into the sea. Nothing stands today. Time erased it.</p>
-
-    <p>The Lighthouse matters because it symbolizes guidance. Helping others was its purpose. Knowledge led the way. Its message remains.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Lighthouse_of_Alexandria_%28artist_render%29.jpg" alt="Lighthouse of Alexandria" width="450" height="300">
+    <p>The Lighthouse of Alexandria, also called the Pharos of Alexandria, was built between 284 and 246 BCE to guide ships safely into the busy harbor. It reached over 100 meters tall and was one of the tallest structures of the ancient world. Its light could be seen for miles and helped sailors avoid dangerous rocks. :contentReference[oaicite:15]{index=15}</p>
+    <p>The lighthouse stood for many centuries but was damaged by several earthquakes. Pieces eventually fell into the sea, though some remains were found underwater by archaeologists. It stood as a symbol of navigation and ancient engineering. :contentReference[oaicite:16]{index=16}</p>
   </section>
-
   <hr>
-
   <footer>
     <p>Author: Anas Arafa</p>
     <p>Email: anasarafa35@gmail.com</p>
   </footer>
 </body>
 </html>
-
